--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
-    <h2>Авторизация</h2>
+    <h2 class="ml-3">Авторизация</h2>
     <div th:class="'alert alert-'+${messageType}">
         <b th:text="${message}"></b>
     </div>
@@ -13,8 +13,10 @@
         <b>Неправильный логин или пароль! Проверьте, активировали ли вы свой аккаунт!</b>
     </div>
     <div th:insert="blocks/login :: login(path=@{/login},user=null,password2=null,captchaError=null)" ></div>
-    <a class="btn my-btn" href="/registration">Зарегистрироваться</a><br>
-    <a href="/recover">Забыли пароль?</a>
+    <div class="ml-3">
+        <a class="btn my-btn" href="/registration">Зарегистрироваться</a><br>
+        <a href="/recover">Забыли пароль?</a>
+    </div>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
