--- a/src/main/resources/templates/blocks/pagination.html
+++ b/src/main/resources/templates/blocks/pagination.html
@@ -28,7 +28,7 @@
         </th:block>
     </ul>
 
-    <ul class="pagination">
+    <ul class="pagination d-none d-xl-flex d-lg-flex">
         <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1">Элементов на странице</a>
         </li>
