--- a/src/main/resources/templates/recover-user.html
+++ b/src/main/resources/templates/recover-user.html
@@ -5,9 +5,11 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
-    <h2>Восстановление доступа к аккаунту</h2>
-    <div class="alert alert-danger" th:if="${not #lists.isEmpty(nonExistsUser)}">
-        <b th:text="${nonExistsUser}"></b>
+    <div class="ml-3 mb-4">
+        <h2>Восстановление доступа к аккаунту</h2>
+        <div class="alert alert-danger" th:if="${not #lists.isEmpty(nonExistsUser)}">
+            <b th:text="${nonExistsUser}"></b>
+        </div>
     </div>
     <form th:action="@{/recover}" method="post">
         <div class="form-group">
@@ -22,7 +24,9 @@
                 <input class="form-control" type="text" name="username" placeholder="Логин"/>
             </div>
         </div>
-        <button type="submit" class="btn my-btn">Восстановить доступ к аккаунту</button>
+        <div class="ml-3">
+            <button type="submit" class="btn my-btn">Восстановить доступ к аккаунту</button>
+        </div>
     </form>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
