--- a/src/main/resources/templates/blocks/pagination.html
+++ b/src/main/resources/templates/blocks/pagination.html
@@ -13,8 +13,12 @@
             </th:block>
 
             <th:block th:if="${i != -1 and i - 1 != page.getNumber()}">
-                <li class="page-item">
+                <li class="page-item" th:if="${#lists.isEmpty(urlParam)}">
                     <a class="page-link" th:href="${url + '?page=' + (i - 1)+ '&size=' + page.getSize()}"
+                       th:text="${i}"></a>
+                </li>
+                <li class="page-item" th:if="${not #lists.isEmpty(urlParam)}">
+                    <a class="page-link" th:href="${url + '?page=' + (i - 1)+ '&size=' + page.getSize() + urlParam}"
                        th:text="${i}"></a>
                 </li>
             </th:block>
@@ -40,8 +44,12 @@
             </th:block>
 
             <th:block th:unless="${c} == ${page.getSize()}">
-                <li class="page-item">
+                <li class="page-item" th:if="${#lists.isEmpty(urlParam)}">
                     <a class="page-link" th:href="${url + '?page=' + page.getNumber()+ '&size=' + c}"
+                       th:text="${c}"></a>
+                </li>
+                <li class="page-item" th:if="${not #lists.isEmpty(urlParam)}">
+                    <a class="page-link" th:href="${url + '?page=' + page.getNumber()+ '&size=' + c + urlParam}"
                        th:text="${c}"></a>
                 </li>
             </th:block>
